--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,8 +5,9 @@ body{
     text-align: center;
 }
 .menu_title{
-    border: 1px solid black;
+    border: 1px solid #000000;
     text-align: center;
+    padding: 5px;
 }
 .menu_text{
     border: 1px solid black;
