--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,9 @@ body{
 .Our_Menu{
     text-align: center;
 }
+.menu_container{
+    margin: 40px;
+}
 .menu_title{
     border: 1px solid #000000;
     text-align: center;
@@ -12,6 +15,7 @@ body{
 .menu_text{
     border: 1px solid black;
     text-align: left;
-    padding: 10px;
+    padding: 15px;
     background-color: grey;
+    margin-bottom: 20px;
 }
