--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,11 +6,20 @@ body{
 }
 .menu_container{
     margin: 40px;
+    display: flex;
+    justify-content: space-between;
 }
 .menu_title{
     border: 1px solid #000000;
     text-align: center;
     padding: 5px;
+    position: relative;
+    height: 20px;
+    
+    
+    
+    
+    
 }
 .menu_text{
     border: 1px solid black;
@@ -18,4 +27,5 @@ body{
     padding: 15px;
     background-color: grey;
     margin-bottom: 20px;
+    padding-top: 35px;
 }
