--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,6 +3,7 @@ body{
 }
 .Our_Menu{
     text-align: center;
+    font-size: 175%;
 }
 .menu_container{
     margin: 40px;
@@ -21,6 +22,7 @@ body{
     float: right;
     width: 100px;
     text-align: center;
+    font-size: 125%;
     
 }
 .menu_text{
@@ -29,5 +31,12 @@ body{
     padding: 15px;
     background-color: grey;
     margin-bottom: 20px;
-    padding-top: 40px;
+    padding-top: 45px;
+}
+
+@media (max-width:767px) {
+.menu_inners{
+    display: block;
+    margin: 20px;
+    }
 }
