Change FS and margin on Mobile devices

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,7 +6,7 @@ body{
     font-size: 175%;
 }
 .menu_container{
-    margin: 40px;
+    margin: 20px;
 }
 .menu_inners{
     display: flex;
@@ -37,4 +37,12 @@ body{
     display: block;
     margin: 20px;
     }
+.Our_Menu{
+    font-size: 110%;
+}
+.menu_title{
+    font-size: 110%;
+}
+.menu_container{
+    margin: 0px;
 }
