--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,6 +32,14 @@ body{
     padding-top: 45px;
 }
 
+/*Tablet version*/
+@media (min-width:768px) and (max-width:991px) {
+
+   
+}
+}
+
+/*Mobile version*/
 @media (max-width:767px) {
 .menu_inners{
     display: block;
