--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,10 +5,12 @@ body{
     text-align: center;
     font-size: 175%;
 }
+.menu_container{
+    margin: 40px;
+}
 .menu_inners{
     display: flex;
     justify-content: space-around;
-    margin: 40px;
 }
 .menu_inner{
     margin: 20px;
@@ -17,10 +19,9 @@ body{
     border: 1px solid #000000;
     padding: 5px;
     float: right;
-    width: 40%;
+    width: 100px;
     text-align: center;
     font-size: 125%;
-    box-sizing: border-box;
     
 }
 .menu_text{
@@ -44,10 +45,5 @@ body{
     }
 .menu_container{
         margin: 0px;
-        
 }
-}
-
-@media (max-width:768px) and (max-width:991) {
-
 }
