--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,12 +5,11 @@ body{
     text-align: center;
     font-size: 175%;
 }
-.menu_container{
-    margin: 40px;
-}
+
 .menu_inners{
     display: flex;
     justify-content: space-around;
+    margin: 40px;
 }
 .menu_inner{
     margin: 20px;
@@ -18,10 +17,11 @@ body{
 .menu_title{
     border: 1px solid #000000;
     padding: 5px;
-    float: right;
-    width: 100px;
     text-align: center;
     font-size: 125%;
+    box-sizing: border-box;
+    float: right;
+    width: 50%;;
     
 }
 .menu_text{
@@ -30,6 +30,11 @@ body{
     padding: 15px;
     background-color: grey;
     padding-top: 45px;
+   
+    
+
+    
+
 }
 
 @media (max-width:767px) {
@@ -38,12 +43,16 @@ body{
     margin: 20px;
     }
 .Our_Menu{
-        font-size: 110%;
+    font-size: 110%;
     }
 .menu_title{
-        font-size: 110%;
+    font-size: 110%;
     }
 .menu_container{
-        margin: 0px;
+    margin: 0px;
 }
+}
+@media (max-width:768px) and (max-width:991px){
+
+
 }
