--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,20 +7,24 @@ body{
 }
 .Our_Menu{
     text-align: center;
-    font-size: 175%;
+    font-size: 150%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
 [class*="col-"] {
     border: 1px solid black;
-    display: inline-block;
-    box-sizing: border-box;
+
+}
+.row{
+    width: 100%;
 }
 
 .col-3{
     background: grey;
-    
-    
+    padding-left: 15px;
+    margin: 15px;
+
 }
 .col-9{
     float: right;
@@ -31,5 +35,6 @@ body{
 h2{
     margin: 5px;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
     
 }
