--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,7 +7,7 @@ body{
 }
 .Our_Menu{
     text-align: center;
-    font-size: 150%;
+    font-size: 120%;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -36,5 +36,6 @@ h2{
     margin: 5px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    
+    font-size: 120%;
+    width: 100%;
 }
