--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,32 +5,30 @@
 body{
     background:white;
 }
-.Our_Menu{
+h1{
     text-align: center;
-    font-size: 120%;
+    font-size: 200%;
     font-family: Arial, Helvetica, sans-serif;
 }
-
 
 [class*="col-"] {
     border: 1px solid black;
 
 }
+
 .row{
     width: 100%;
+    /*display: flex;*/
 }
 
-.col-3{
+.col-lg-3, .col-md-3{
     background: grey;
-    padding-left: 15px;
     margin: 15px;
 
 }
-.col-9{
+.col-lg-9, .col-mg-10{
     float: right;
     width: 20%;
-  
-
 }
 h2{
     margin: 5px;
