--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,108 +1,130 @@
 * {
-    box-sizing: border-box;
-  }
+  Box-sizing: border-box;
+}
+
+body{
+  font-family: Arial, Helvetica, sans-serif;
+ 
+}
+.row{
+  width: 90%;
+  margin: 0 auto;
+}
+
+[class*="col-"] {
+  /*float: left;*/
+  display: inline-block;
+  background-color: grey;
+  margin: 10px 10px;
+  border: 1px solid rgb(0, 0, 0);
+}
 
 .Our_Menu{
-    text-align: center;
-    font-size: 150%;
+  text-align: center;
+  font-size: 150%;
 }
-p {
-    width: 90%;
-    margin-right: auto;
-    margin-left: auto;
-    font-family: Helvetica;
-  }
+.title{
+  float: right;
+  border: 1px solid rgb(0, 0, 0);
+  width: 120px;
+  text-align: center;
+  font-size: 120%;
+}
 
-/* Simple Responsive Framework. */
-.row {
-    width: 100%;
-  }
-/********** Large devices only **********/
+.paragraph{
+  padding-top: 40px;
+  margin-bottom: 15px;
+  width: 90%;
+  margin-right: auto;
+  margin-left: auto;
+  
+}
+p{
+  margin: 5px auto;
+}
 @media (min-width: 1200px) {
     .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6,
     .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-      /*float: left;*/
-      border: 1px solid rgb(0, 0, 0);
-    }
-    .col-lg-1 {
-      width: 8.33%;
-    }
-    .col-lg-2 {
-      width: 16.66%;
-    }
-    .col-lg-3 {
-      width: 25%;
-    }
-    .col-lg-4 {
-      width: 33.33%;
-    }
-    .col-lg-5 {
-      width: 41.66%;
-    }
-    .col-lg-6 {
-      width: 50%;
-    }
-    .col-lg-7 {
-      width: 58.33%;
-    }
-    .col-lg-8 {
-      width: 66.66%;
-    }
-    .col-lg-9 {
-      width: 74.99%;
-    }
-    .col-lg-10 {
-      width: 83.33%;
-    }
-    .col-lg-11 {
-      width: 91.66%;
-    }
-    .col-lg-12 {
-      width: 100%;
-    }
-  }
-
-  /********** Medium devices only **********/
+  float: left;
+  /*border: 1px solid rgb(0, 0, 0);*/
+}
+.col-lg-1 {
+  width: 8.33%;
+}
+.col-lg-2 {
+  width: 16.66%;
+}
+.col-lg-3 {
+  width: 25%;
+}
+.col-lg-4 {
+  width: 31%;
+}
+.col-lg-5 {
+  width: 41.66%;
+}
+.col-lg-6 {
+  width: 50%;
+}
+.col-lg-7 {
+  width: 58.33%;
+}
+.col-lg-8 {
+  width: 66.66%;
+}
+.col-lg-9 {
+  width: 74.99%;
+}
+.col-lg-10 {
+  width: 83.33%;
+}
+.col-lg-11 {
+  width: 91.66%;
+}
+.col-lg-12 {
+  width: 100%;
+}
+}
 @media (min-width: 992px) and (max-width: 1199px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6,
-   .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-    float: left;
-    border: 1px solid green;
-  }
-  .col-md-1 {
-    width: 8.33%;
-  }
-  .col-md-2 {
-    width: 16.66%;
-  }
-  .col-md-3 {
-    width: 25%;
-  }
-  .col-md-4 {
-    width: 33.33%;
-  }
-  .col-md-5 {
-    width: 41.66%;
-  }
-  .col-md-6 {
-    width: 50%;
-  }
-  .col-md-7 {
-    width: 58.33%;
-  }
-  .col-md-8 {
-    width: 66.66%;
-  }
-  .col-md-9 {
-    width: 74.99%;
-  }
-  .col-md-10 {
-    width: 83.33%;
-  }
-  .col-md-11 {
-    width: 91.66%;
-  }
-  .col-md-12 {
-    width: 100%;
-  }
+.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6,
+.col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+  float: left;
+  /*border: 1px solid rgb(0, 0, 0);*/
+}
+.col-md-1 {
+  width: 8.33%;
+}
+.col-md-2 {
+  width: 16.66%;
+}
+.col-md-3 {
+  width: 25%;
+}
+.col-md-4 {
+  width: 33.33%;
+}
+.col-md-5 {
+  width: 41.66%;
+}
+.col-md-6 {
+  width: 47%;
+}
+.col-md-7 {
+  width: 58.33%;
+}
+.col-md-8 {
+  width: 66.66%;
+}
+.col-md-9 {
+  width: 74.99%;
+}
+.col-md-10 {
+  width: 83.33%;
+}
+.col-md-11 {
+  width: 91.66%;
+}
+.col-md-12 {
+  width: 100%;
+}
 }
