--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 * {
-  Box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body{
@@ -7,7 +7,7 @@ body{
  
 }
 .row{
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
 }
 
@@ -24,11 +24,12 @@ body{
   font-size: 150%;
 }
 .title{
-  float: right;
+  
   border: 1px solid rgb(0, 0, 0);
   width: 120px;
   text-align: center;
   font-size: 120%;
+  float: right;
 }
 
 .paragraph{
@@ -37,6 +38,7 @@ body{
   width: 90%;
   margin-right: auto;
   margin-left: auto;
+  
   
 }
 p{
@@ -91,6 +93,7 @@ p{
   float: left;
   /*border: 1px solid rgb(0, 0, 0);*/
 }
+
 .col-md-1 {
   width: 8.33%;
 }
